--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
 
     function preload ()
     {
-        this.load.setBaseURL('http://labs.phaser.io');
-
-        this.load.image('sky', 'assets/skies/space3.png');
-        this.load.image('logo', 'assets/sprites/phaser3-logo.png');
-        this.load.image('red', 'assets/particles/red.png');
+        this.load.image('dev', 'assets/Dev.jpg');
+        this.load.image('sky', 'assets/space3.png');
+        this.load.image('logo', 'assets/phaser3-logo.png');
+        this.load.image('red', 'assets/red.png');
     }
 
     function create ()
@@ -56,6 +55,7 @@
 
         logo.setVelocity(0, 0);
 
+        //LOGO
         var sprite = this.add.sprite(400, 300, 'logo').setInteractive();
 
         sprite.on('pointerdown', function (pointer) {
@@ -63,13 +63,23 @@
         scoreText.setText('Score: ' + score);
         });
 
-        emitter.startFollow(logo);
+        //DEV
+        var sprite = this.add.sprite(700, 100, 'dev').setInteractive();
+
+        sprite.on('pointerdown', function (pointer) {
+        score -= 10;
+        scoreText.setText('Score: ' + score);
+        });
+
+
 
         var style = { font: "65px Arial", fill: "#ffffff", align: "center" };
         var score = 0;
         var scoreText;
 
         scoreText = this.add.text(16, 16, 'score: 0', { fontSize: '75px', fill: '#ffffff' });
+        
+        emitter.startFollow(logo);
 
     }
     </script>
